--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
     "chart.js": "^3.5.0",
+    "jquery": "^3.6.0",
+    "nepali-datepicker-reactjs": "^1.1.5",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-chartjs-2": "^3.0.4",
